// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should error out if a non-404 error is returned from the GET request (with a json body) 1`] = `
{
  "error": [APIv2Error: ReadMe API error: bad request

something went so so wrong],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✖ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... 1 file(s) failed.
",
  "stdout": "🚨 Unable to fetch data about the following 1 page(s):
   - __tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md: bad request
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should error out if a non-404 error is returned from the GET request 1`] = `
{
  "error": [Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✖ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... 1 file(s) failed.
",
  "stdout": "🚨 Unable to fetch data about the following 1 page(s):
   - __tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should not create anything in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": null,
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✔ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... done!
",
  "stdout": "🌱 The following 1 page(s) do not currently exist in ReadMe and will be created:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the --dry-run flag is passed > should not update anything in ReadMe 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": null,
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🎭 Uploading files to ReadMe (but not really because it's a dry run)...
✔ 🎭 Uploading files to ReadMe (but not really because it's a dry run)... done!
",
  "stdout": "🔄 The following 1 page(s) already exist in ReadMe and will be updated:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should exit if the user declines to fix the issues 1`] = `
{
  "error": [Error: Aborting upload due to user input.],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
",
  "stdout": "",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should fix the frontmatter issues in the file and create the corrected file in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/legacy-docs/autofixable.md",
        "response": {},
        "result": "created",
        "slug": "autofixable",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - autofixable (__tests__/__fixtures__/changelog/legacy-docs/autofixable.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should skip client-side validation if the --skip-validation flag is passed 1`] = `
{
  "error": [APIv2Error: ReadMe API error: bad request

your hidden flag is whack],
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
 ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
- 🚀 Uploading files to ReadMe...
✖ 🚀 Uploading files to ReadMe... 1 file(s) failed.
",
  "stdout": "🚨 Received errors when attempting to upload 1 page(s):
   - __tests__/__fixtures__/changelog/legacy-docs/autofixable.md: bad request
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the file has frontmatter issues > should warn user if the file has no autofixable issues 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/legacy-docs/unfixable.md",
        "response": {},
        "result": "created",
        "slug": "unfixable",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
⚠ 🔬 Validating frontmatter data... issues found in 1 file(s).
 ›   Warning: 1 file(s) have issues that cannot be fixed automatically. The 
 ›   upload will proceed but we recommend addressing these issues. Please get 
 ›   in touch with us at support@readme.io if you need a hand.
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - unfixable (__tests__/__fixtures__/changelog/legacy-docs/unfixable.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the slug is passed in the frontmatter > should use that slug to create a page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "created",
        "slug": "some-slug",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > given that the slug is passed in the frontmatter > should use that slug update an existing page in ReadMe 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🔄 Successfully updated 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/changelog/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should create a page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: This command is in an experimental alpha and is likely to change.
 ›    Use at your own risk!
- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;

exports[`rdme changelog upload > given that the file path is a single file > should hide the warning if the \`--hide-experimental-warning\` flag is passed 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/changelog/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "- 🔬 Validating frontmatter data...
✔ 🔬 Validating frontmatter data... no issues found!
- 🚀 Uploading files to ReadMe...
✔ 🚀 Uploading files to ReadMe... done!
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/changelog/new-docs/new-doc.md)
",
}
`;
